# AxI-budget

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: README.md  ci-cd.yml  deploy-prod.yml  deploy-stg.yml  test-backend.yml  test-e2e.yml  test-frontend.yml
api-schema/: openapi.yml  package.json
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs
backend/src/application/: mod.rs  use_cases.rs
backend/src/domain/: entities.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
backend/src/infrastructure/: dynamodb.rs  mod.rs
docs/: FEATURES.md  FRONTEND_DEPLOYMENT.md  design-docs.md  iic.drawio  infra-architecture.drawio
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AccountsList.tsx  CategoriesList.tsx  GuestNotice.tsx  Header.tsx  Layout.tsx  Navigation.tsx
frontend/src/config/: aws.ts
frontend/src/hooks/: useStores.ts
frontend/src/stores/: auth.ts  (+5 more)
infrastructure/: AWS_PROFILE_SETUP.md  README.md  api_gateway.tf  cognito.tf  dynamodb.tf  main.tf  outputs.tf  s3_cloudfront.tf  variables.tf
scripts/: deploy-aws-management.sh  deploy-frontend.sh  generate-env.sh
terraform/: .gitignore  AWS_PROFILE_SETUP.md  README.md
terraform/aws-accounts/: README.md  main.tf  outputs.tf  resources.tf  variables.tf
terraform/iic/: README.md  main.tf  outputs.tf  resources.tf  terraform.tfvars.example  variables.tf
(+61 files in other folders)
