[package]
name = "axi-budget-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS Lambda
lambda_runtime = "0.8"
lambda-web = "0.2"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "4.0"
async-trait = "0.1"

# AWS SDK
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"

# HTTP & API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Testing
mockall = "0.12"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
